--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 }
 #headers{
     text-align: center; 
+    text-shadow: 0px 4px 3px #ADA7A7;
 }
 .center {
     text-align: center;
@@ -40,7 +41,7 @@ body {
      display: inline;
      font-size: 4em;
      border: 1px solid black;
-     background-color: rgba(250, 238, 253, 0.88);
+     background-color: rgba(250, 238, 253, 0.89);
      padding: 0 10px;
  }
 #playerInput{
@@ -49,7 +50,7 @@ body {
     width: 160px;
     height: 160px;
     font-size: 60px;
-    background-color:rgba(250, 238, 253, 0.88);
+    background-color:rgba(250, 238, 253, 0.90);
     color: black;
 }
 #submit{
