--- a/style.css
+++ b/style.css
@@ -77,3 +77,10 @@ body {
     margin: 5% auto 50px;
     position: relative;
 }
+#threeHints{
+    border: 1px solid black;
+    width: 50%;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: white;
+}
